# algorithms-archive

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md  build.gradle  settings.gradle
.ccls-cache/@Users@dupe@projects@algorithms-archive/: cpp@src@example_module@example.cpp  cpp@src@example_module@example.cpp.blob  cpp@src@example_module@example.h  cpp@src@example_module@example.h.blob  cpp@tests@example_module@example.test.cpp  cpp@tests@example_module@example.test.cpp.blob
algorithms-archive-python/huffman-encoding/: README.md  huff_zip.py  walkthrough.ipynb
algorithms-archive-python/huffman-encoding/huffman/: encoder.py
algorithms-archive-python/huffman-encoding/outputs/: ai_thriller.huff  ai_thriller_decoded.txt  simple.huff
cpp/: .gitignore  CMakeLists.txt  README.md
cpp/demos/: CMakeLists.txt
cpp/demos/binary_search/: CMakeLists.txt  demo.cpp
cpp/demos/graphs/: CMakeLists.txt  adjacency_matrix.cpp  adjacency_matrix_demo.cpp
cpp/demos/hello_world/: hello.cpp
cpp/examples/example_module/: demo.cpp
cpp/include/algorithms_archive/binary_search/: search.h
cpp/include/algorithms_archive/data_structures/: graph.h
cpp/include/algorithms_archive/graph/: graph.h
cpp/include/algorithms_archive/search/: graph.h
cpp/src/: CMakeLists.txt
cpp/src/binary_search/: CMakeLists.txt  search.cpp
cpp/src/data_structures/: CMakeLists.txt  graph.cpp
cpp/src/graph/: CMakeLists.txt  graph.cpp
cpp/src/search/: CMakeLists.txt  graph.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/binary_search/: CMakeLists.txt  test_search.cpp
cpp/tests/search/: CMakeLists.txt  test_graph_search.cpp
ocaml/: ocaml.txt
python/huffman-encoding/: README.md  \  encoder.py  huff_zip.py  walkthrough.ipynb
python/huffman-encoding/outputs/: ai_thriller.huff  simple.huff  simple_decoded.txt
rust/: README.md
src/main/clojure/org/dupe/: main.clj
src/main/java/org/dupe/: Main.java
src/main/kotlin/demo/: App.kt
src/main/resources/: attribution.md
src/main/scala/demo/: App.scala
src/main/scala/gradientdescent/demo/: Demo.scala
src/main/scala/gradientdescent/impl/: GradientDescent.scala
